ReqSys/EKS/eks-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-reqsys-backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eks-reqsys-backend
  template:
    metadata:
      labels:
        app: eks-reqsys-backend
    spec:
      containers:
        - name: eks-reqsys-backend
          image: 131466135658.dkr.ecr.ap-northeast-2.amazonaws.com/reqsys
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
          # 1vCPU = 1000m(milicore)
            requests:
              cpu: 250m
            limits:
              cpu: 500m
