ReqSys/EKS/eks-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reqsys-backend
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: reqsys-backend
  type: NodePort
  ports:
    - port: 3000 # 서비스가 생성할 포트  
      targetPort: 3000 # 서비스가 접근할 pod의 포트
      protocol: TCP
